// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders heading1 correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontFamily": ".SFUIDisplay-semibold",
        "fontSize": 20,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders paragraph correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#7F91A7",
        "fontSize": 16,
        "lineHeight": 23,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders text correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      undefined,
    ]
  }
/>
`;
